--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
 body {background-color:pink}
 </style>
-<tittle>html and css use</tittle>
+<title>html and css use</title>
 </head>
 <body>
 <h1 style="color:red;">Welcome to My HTML Project</h1>
